--- a/src/app/global.css
+++ b/src/app/global.css
@@ -1,11 +1,12 @@
-@import "tailwindcss";
-@import "../../theme.css";
+@import 'tailwindcss';
+@import '../../theme.css';
 @source "./**/*.tsx";
 
 @font-face {
   font-family: 'Billy Ohio';
-  src: url('/fonts/BillyOhio.woff2') format('woff2'),
-       url('/fonts/BillyOhio.woff') format('woff');
+  src:
+    url('/fonts/BillyOhio.woff2') format('woff2'),
+    url('/fonts/BillyOhio.woff') format('woff');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -13,8 +14,9 @@
 
 @font-face {
   font-family: 'Baskerville';
-  src: url('/fonts/Baskerville.woff2') format('woff2'),
-       url('/fonts/Baskerville.woff') format('woff');
+  src:
+    url('/fonts/Baskerville.woff2') format('woff2'),
+    url('/fonts/Baskerville.woff') format('woff');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -22,11 +24,11 @@
 
 @theme {
   --color-wedding-brown-700: #756356;
-  --color-wedding-gold-500: #D2BB4C;
-  --color-wedding-gold-400: #E9BD80;
-  --color-wedding-gold-300: #E2BF8E;
-  --color-wedding-gold-200: #EAD4B6;
-  --color-wedding-gold-100: #FCF9F5;
+  --color-wedding-gold-500: #d2bb4c;
+  --color-wedding-gold-400: #e9bd80;
+  --color-wedding-gold-300: #e2bf8e;
+  --color-wedding-gold-200: #ead4b6;
+  --color-wedding-gold-100: #fcf9f5;
   --text-10xl: 9rem;
   --text-11xl: 10rem;
   --ease-fluid: cubic-bezier(0.3, 0, 0, 1);
@@ -37,7 +39,9 @@
 
 @layer base {
   html {
-    font-family: Baskerville, "Baskerville Old Face", "Hoefler Text", Garamond, "Times New Roman", serif;
+    font-family:
+      Baskerville, 'Baskerville Old Face', 'Hoefler Text', Garamond,
+      'Times New Roman', serif;
   }
 }
 
@@ -46,5 +50,7 @@
 }
 
 .font-baskerville {
-  font-family: Baskerville, "Baskerville Old Face", "Hoefler Text", Garamond, "Times New Roman", serif;
+  font-family:
+    Baskerville, 'Baskerville Old Face', 'Hoefler Text', Garamond,
+    'Times New Roman', serif;
 }
